--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bait",
+  "name": "flick",
   "version": "0.1.0",
   "description": "Post-receive hooks handler",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/romac/bait"
+    "url": "https://github.com/romac/flick"
   },
   "keywords": [
     "github",
