--- a/package.json
+++ b/package.json
@@ -19,11 +19,7 @@
   "author": "Romain Ruetschi (romain.ruetschi@gmail.com)",
   "license": "MIT",
   "readmeFilename": "README.md",
-  "dependencies": {
-    "connect": "~2.7.0",
-    "async": "~0.1.22",
-    "shelljs": "0.0.8"
-  },
+  "dependencies": {},
   "devDependencies": {
     "mocha": "*",
     "should": "*",
