--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Romain Ruetschi (romain.ruetschi@gmail.com)",
   "license": "MIT",
   "readmeFilename": "README.md",
+  "engines" : { "node" : ">=0.8.0" },
   "dependencies": {
     "netmask": "1.0.4"
   },
